@@ -47,7 +47,6 @@ import java.util.List;
 import java.util.Random;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static org.apache.kafka.common.acl.AclOperation.READ;
@@ -98,7 +97,7 @@ public class StandardAuthorizerUpdateBenchmark {
                 return aclsForResource(resourcePattern);
             })
             .flatMap(Collection::stream)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<StandardAclWithId> aclsForResource(ResourcePattern pattern) {
@@ -109,7 +108,7 @@ public class StandardAuthorizerUpdateBenchmark {
                 return new StandardAcl(pattern.resourceType(), pattern.name(), pattern.patternType(), p, h, READ, ALLOW);
             })
             .map(this::withId)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private StandardAclWithId withId(StandardAcl acl) {
